Add push to HuggingFace hub option

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ SFT_BF16=true
 SFT_WARMUP_RATIO=0.05
 SFT_LR_SCHEDULER_TYPE="constant"
 PACKING=true
+
+
+# HuggingFace Configuration
+HF_ACCESS_TOKEN=""
