--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ peft==0.12.0
 bitsandbytes==0.43.3
 trl==0.9.6
 ipywidgets==8.1.5
-python-dotenv==1.0.1
 loguru==0.7.2
+hydra-core==1.3.2
 
 # Development dependencies
 # These are only needed for development and code quality checks.
